added leaderboard, total cash, and dealer title

--- a/index.html
+++ b/index.html
@@ -13,29 +13,33 @@
 </head>
 
 <body>
+    
     <div id = "header">
-        <h3 id = "playerName">Player: Will</h3>
         <h3 id = "totalCash">Total Cash: $3000</h3>
+        <h3 id = "playerName">Player: Will</h3>
             <p id="leaderboardButton">
                 <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="leaderboardButton">
                     Leaderboard
                   </button>
                 </p>
                 <div class="collapse" id="collapseExample">
-                  <div class="card card-body">
-                      <ol id = "leaderboardList">
-                          <li>Ariana Grande</li>
-                          <li>The Pope </li>
-                          <li>DJ Khaled </li>
-                          <li>Michelle Obama </li>
-                          <li>Trevor Lawerence</li>
+                  <div class="card card-body" id = "leaderboardList">
+                      <ol id = "leaderboardNames">
+                          <li>Ariana Grande: $8000</li>
+                          <li>The Pope: $7800 </li>
+                          <li>DJ Khaled: $5000 </li>
+                          <li>Michelle Obama: $3700 </li>
+                          <li>Trevor Lawerence: $3450 </li>
                       </ol>
                   </div>
                 </div>
             </p>
     </div>
 
-    <
+    <div id = "dealer">
+        <h3 id = "dealerTitle">Dealer</h3>
+    </div>
+
 
 </body>
 </html>
