--- a/index.html
+++ b/index.html
@@ -13,32 +13,39 @@
 </head>
 
 <body>
-    
-    <div id = "header">
-        <h3 id = "totalCash">Total Cash: $3000</h3>
-        <h3 id = "playerName">Player: Will</h3>
-            <p id="leaderboardButton">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="leaderboardButton">
-                    Leaderboard
-                  </button>
-                </p>
-                <div class="collapse" id="collapseExample">
-                  <div class="card card-body" id = "leaderboardList">
-                      <ol id = "leaderboardNames">
-                          <li>Ariana Grande: $8000</li>
-                          <li>The Pope: $7800 </li>
-                          <li>DJ Khaled: $5000 </li>
-                          <li>Michelle Obama: $3700 </li>
-                          <li>Trevor Lawerence: $3450 </li>
-                      </ol>
-                  </div>
-                </div>
+    <div class = "jumbotron">
+    <nav id = leadAndReset>
+        <p id="leaderboardButton">
+            <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" id="leaderboardButton">
+                Leaderboard
+            </button>
             </p>
+            <div class="collapse" id="collapseExample">
+            <div class="card card-body" id = "leaderboardList">
+                <ol id = "leaderboardNames">
+                    <li>Ariana Grande: $8000</li>
+                    <li>The Pope: $7800 </li>
+                    <li>DJ Khaled: $5000 </li>
+                    <li>Michelle Obama: $3700 </li>
+                    <li>Trevor Lawerence: $3450 </li>
+                </ol>
+            </div>
+            </div>
+        </p>
+       
+
+        <button type="button" class="btn btn-danger btn-sm" id = "resetButton">Reset</button>
+    </nav>
     </div>
 
-    <div id = "dealer">
-        <h3 id = "dealerTitle">Dealer</h3>
-    </div>
+<div id = "header">
+    <h3 id = "playerName">Player: Will</h3>
+    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>3000</span></h3>
+</div>
+
+<div id = "dealer">
+    <h3 id = "dealerTitle">Dealer</h3>
+</div>
 
 
 </body>
