--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
 <div id = "header">
     <h3 id = "playerName">Player: Will</h3>
-    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>3000</span></h3>
+    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>300</span></h3>
     <div class="card large back-red shadow" id = "deck1"></div>
 </div>
 
@@ -79,12 +79,12 @@
 
 
 <div id = "currentScores">
-    <h3 id = "dealerTotal">Dealer Score: <span id = playerCurrentScore>14</span></h3>
+    <h3 id = "dealerTotal">Dealer Score: <span id = dealerCurrentScore>0</span></h3>
 </div>
 
 <div id = "dealerDeck" class = "cards">
-    <div class="card large outline" id = "deck2"></div>
-    <div class="card large outline" id = "deck2"></div>
+    <div class="card large outline" id = "dealerCard1"></div>
+    <div class="card large outline" id = "dealerCard2"></div>
 </div>
 
 
@@ -93,26 +93,23 @@
 </div>
 
 <div id = "currentScores">
-<h3 id = "dealerTotal">Player Score: <span id = playerCurrentScore>18</span></h3>
+<h3 id = "dealerTotal">Player Score: <span id = playerCurrentScore>0</span></h3>
 </div>
 
 <div id = "playerDeck" class = "cards">
-    <div class="card large outline" id = "deck2"></div>
-    <div class="card large outline" id = "deck2"></div>
+    <div class="card large outline" id = "playerCard1"></div>
+    <div class="card large outline" id = "playerCard2"></div>
 </div>
 
-<div id = "betInput" class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text">$</span>
-    </div>
-    <input type="number" aria-label="Dollar amount (with dot and two decimal places)">
-    <button class = "btn btn-dark" id="betButton">Place Bet</button>
-  </div>
+<div id = "betButtonDiv">
+    <button type="button" id="betButton" class="btn btn-dark" >Bet $<span id = "betAmount">64</span> </button>
+</div>
+
   
 
 <div id = "buttonLine">
-<div><button class="btn btn-primary" id="hitButton">Hit</button></div>
-<div><button class="btn btn-primary" id="hitButton">Stand</button></div>
+<div id = "hitButton"><button class="btn btn-primary" id="hitButton">Hit</button></div>
+<div><button class="btn btn-primary" id="standButton">Stand</button></div>
 </div>
 </body>
 </html>
