--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     <div class="card large back-red shadow" id = "deck1"></div>
 </div>
 
-
+<div>
+    <h2 id = "message">Let's play some Blackjack!</h2>
+</div>
     <div class= "titles">
         <h3 id = "dealerTitle">Dealer</h3>
 </div>
