all win and loss set up, betting almost completely set up

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div>
 
 <div id = "betButtonDiv">
-    <button type="button" id="betButton" class="btn btn-dark" >Bet $<span id = "betAmount">64</span> </button>
+    <button type="button" id="betButton" class="btn btn-dark" >Bet set at <br>$<span id = "betAmount">50</span> </button>
 </div>
 
   
