--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
     
 <div id = "header">
     <h3 id = "playerName">Player: Will</h3>
-    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>300</span></h3>
-    <div class="card large back-red shadow" id = "deck1"></div>
+    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>100</span></h3>
 </div>
 
 <div>
@@ -105,6 +104,8 @@
 
 <div id = "betButtonDiv">
     <button type="button" id="betButton" class="btn btn-dark" >Bet set at <br>$<span id = "betAmount">50</span> </button>
+    <button type="button" id="betButton" class="btn btn-warning"  id = "doubleDownButton">Double Down <br> Bet</button> 
+
 </div>
 
   
