ace logic is PROBABLY actually working this time

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
 <div id = "header">
     <h3 id = "playerName">Player: Will</h3>
-    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>1000000</span></h3>
+    <h3 id = "totalCash">Total Cash: $<span id = cashTotal>1000</span></h3>
 </div>
 
 <div>
