ace not working, but this is it

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
 <div id = "currentScores">
-    <h3 id = "dealerTotal">Dealer Score: <span id = dealerCurrentScore>0</span></h3>
+    <h3 id = "dealerScore">Dealer Score: <span id = dealerCurrentScore>0</span></h3>
 </div>
 
 <div id = "dealerDeck" class = "cards">
@@ -98,7 +98,7 @@
 </div>
 
 <div id = "currentScores">
-<h3 id = "dealerTotal">Player Score: <span id = playerCurrentScore>0</span></h3>
+<h3 id = "dealerScore">Player Score: <span id = playerCurrentScore>0</span></h3>
 </div>
 
 <div id = "playerDeck" class = "cards">
